# monoglot-rift

./: .clang-format  .cppcheck_suppressions  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  config.h.in
RIFT_MVP/: backup.c  tokenziation
RIFT_MVP/battle_tested/: Cargo.toml  README.md
RIFT_MVP/battle_tested/src/: lib.rs  main.rs
RIFT_MVP/examples/log_analyzer/: CMakeLists.txt  Makefile  README.md  log_analyzer.c
RIFT_MVP/examples/matcher/: CMakeLists.txt  pattern_matcher.c
cmake/: LibRiftConfig.cmake.in
cmake/modules/: CodeCoverage.cmake  FindCheck.cmake
docs/: ARCH.md  DEV_HELP.md  ENDINESS.md  patterns.md
docs/bridge/: webbridge.txt
include/: rift.h.bak  version.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  rift.c  rift.c.bak
src/automaton/: README.md  minimizer.c  minimizer.c.bak  state.c  state.c.bak  transition.c  transition.c.bak
src/cli/: main.c.bak
src/cli/accessibility/: accessiblity_manager.c  accessiblity_manager.c.bak  color_scheme_manager.c  color_scheme_manager.c.bak  keyboard_navigation_manager.c.bak  preferences_manager.c  preferences_manager.c.bak  regex_accesibility_bridge.c.bak  screen_reader_adapter.c.bak  ui_adapation_manager.c.bak
src/cli/command/: ast_command.c  ast_command.c.bak  bytecode_command.c  command.c  command.c.bak  command_factory.c  command_factory.c.bak  compile_command.c  compile_command.c.bak  parse_command.c  parse_command.c.bak  rift_tokenize_command.c  rift_tokenize_command.c.bak
src/core/: placeholder.c
src/core/automaton/: README.md  flags.c  flags.c.bak  minimizer.c  minimizer.c.bak  regex.c  regex.c.bak  state.c  state.c.bak  transition.c  transition.c.bak
src/core/bytecode/: README.md  bytecode.c  bytecode.c.bak  bytecode_compiler.c  bytecode_compiler.c.bak  bytecode_program.c  bytecode_program.c.bak  bytecode_system.c  bytecode_system.c.bak  bytecode_vm.c  bytecode_vm.c.bak
src/core/compiler/: compiler.c  compiler.c.bak
src/core/config/: config.c  config.c.bak
src/core/dsl/: rift_dsl.c  rift_dsl.c.bak  rift_dsl_compiler.c  rift_dsl_compiler.c.bak  rift_dsl_io.c  rift_dsl_io.c.bak  rift_dsl_parser.c  rift_dsl_parser.c.bak  rift_dsl_test_runner.c
src/core/engine/: engine.c  engine.c.bak  matcher.c  matcher.c.bak  pattern.c  pattern.c.bak
src/core/errors/: error.c  error.c.bak  regex_error.c  regex_error.c.bak  regex_error_compat.c  regex_error_compat.c.bak
src/core/memory/: memory.c  memory.c.bak
src/core/parser/: ast.c  ast.c.bak  ast_node.c  ast_node.c.bak  parser.c  parser.c.bak  validator.c  validator.c.bak
src/core/patterns/: baseline_patterns.c  baseline_patterns.c.bak  pattern_extensions.c  pattern_extensions.c.bak
src/core/regex/: README.md  flags.c  regex.c  regex.c.bak
src/core/runtime/: backtracker.c  backtracker.c.bak  backtracker_backtracker_bailout_strategy_manager.c  backtracker_backtracker_extension.c  backtracker_backtracker_extension.c.bak  backtracker_backtracker_limit_registry.c.bak  backtracker_backtracker_safe_backtracker.c  backtracker_bailout_strategy_manager.c  backtracker_bailout_strategy_manager.c.bak  backtracker_extension.c  backtracker_limit_registry.c  backtracker_limit_registry.c.bak  context.c  context.c.bak  context_context_thread_safe_context.c  execution_execution_execution_tracker.c.bak  execution_execution_tracker.c.bak  groups_groups.c  groups_groups.c.bak  groups_groups_groups.c.bak  pattern_pattern_complexity_strategy.c  pattern_pattern_pattern_complexity_strategy.c  pattern_pattern_pattern_tracking_strategy.c.bak  pattern_tracking_strategy.c  pattern_tracking_strategy.c.bak  safe_backtracker.c  thread_safe_context.c
src/core/syntax/: integration.c  integration.c.bak  lexer.c  lexer.c.bak  parser.c  parser.c.bak  syntax.c  syntax.c.bak
src/core/tokenizer/: token.c  token.c.bak  token_type.c  token_type.c.bak  tokenizer.c  tokenizer.c.bak
src/core/webbridge/: bridge_api.c  bridge_api.c.bak  webbrige.c.bak
src/engine/: README.md  engine.c  engine.c.bak  matcher.c  matcher.c.bak  pattern.c
src/runtime/: backtracker.c  backtracker_bailout_strategy_manager.c  backtracker_bailout_strategy_manager.c.bak  backtracker_extension.c  backtracker_extension.c.bak  backtracker_limit_registry.c  backtracker_limit_registry.c.bak  backtracker_safe_backtracker.c  backtracker_safe_backtracker.c.bak  context.c  context_thread_safe_context.c  context_thread_safe_context.c.bak  contexthread_safe_context.c  contexthread_safe_context.c.bak  execution_tracker.c  execution_tracker.c.bak  groups.c  groups.c.bak  pattern_complexity_strategy.c  pattern_complexity_strategy.c.bak  pattern_pattern_tracking_strategy.c  pattern_pattern_tracking_strategy.c.bak  pattern_tracking_strategy.c  pattern_tracking_strategy.c.bak
tests/: CMakeCache.txt  CMakeLists.txt  LibRiftConfig.cmake  Makefile  cmake_install.cmake  run_tests.sh
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/core/: bailout_strategy_manager_test.c  config_test.c  execution_tracker_test.c  groups_test.c  integration_test.c  lexer_test.c  minimizer_tests.c  regex_tests.c  state_tests.c  transition_tests.c  validator_test.c
tests/unit/core/automaton/: automaton_tests.c  test_automaton.c  test_automaton.h
tests/unit/core/bytecode/: bytecode_compiler_test.c
tests/unit/core/compiler/: compiler_test.c
tests/unit/core/engine/: baseline_pattern_test.c  engine_test.c  matcher_test.c  pattern_complexity_strategy_test.c  pattern_extensions_test.c  pattern_test.c  pattern_tracking_strategy_test.c
tests/unit/core/errors/: error_test.c  regex_error_compact_test.c  regex_error_test.c
tests/unit/core/memory/: memory_test.c
tests/unit/core/parser/: ast_node_test.c  ast_test.c  parser_test.c
tests/unit/core/runtime/: backtracker_extension_test.c  backtracker_limit_registry_test.c  backtracker_test.c  context_test.c  safe_backtracker_test.c  thread_safe_context_test.c
tests/unit/core/syntax/: syntax_test.c
tests/unit/core/tokenizer/: token_test.c  token_type_test.c  tokenizer_test.c
tools/: build.sh
(+1169 files in other folders)
