[package]
name = "battle_tested"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# Core dependencies
criterion = "0.5.1"

[dev-dependencies]
# Testing and profiling tools
mockall = "0.11.4"
flamegraph = "0.6.7"

[profile.release]
debug = true  # Enable debug symbols for profiling

[[bench]]
name = "performance_benchmark"
harness = false

[workspace]
# Optional: define workspace if needed